--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>推しカプ シチュエーション錬成炉</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    corePlugins: {
+      preflight: false
+    }
+  }
+</script>
+<meta name="theme-color" content="#06080f">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;400;600;900&family=Shippori+Mincho:wght@400;600;800&display=swap" rel="stylesheet">
@@ -49,10 +57,15 @@ animation: aurora-shift 4s ease infinite;
 
 - { box-sizing: border-box; margin: 0; padding: 0; }
 
+html {
+background-color: #06080f !important;
+}
+
 body {
 font-family: ‘Noto Serif JP’, serif;
-background: var(–ink);
-color: var(–paper);
+background-color: #06080f !important;
+background: #06080f !important;
+color: #e8eef5 !important;
 min-height: 100vh;
 overflow-x: hidden;
 }
@@ -85,19 +98,20 @@ animation: aurora-shift 4s ease infinite;
 
 /* Select styling */
 .custom-select {
+-webkit-appearance: none;
 appearance: none;
-background: rgba(255,255,255,0.03);
+background-color: rgba(255,255,255,0.03);
+background-image: url(“data:image/svg+xml,%3Csvg xmlns=‘http://www.w3.org/2000/svg’ width=‘12’ height=‘12’ viewBox=‘0 0 12 12’%3E%3Cpath fill=’%237fffd4’ d=‘M6 8L1 3h10z’/%3E%3C/svg%3E”);
+background-repeat: no-repeat;
+background-position: right 1rem center;
 border: 1px solid rgba(127,255,212,0.2);
-color: var(–paper);
+color: #e8eef5 !important;
 font-family: ‘Noto Serif JP’, serif;
 font-size: 0.9rem;
 padding: 0.7rem 2.5rem 0.7rem 1rem;
 width: 100%;
 cursor: pointer;
 transition: border-color 0.3s, background 0.3s, box-shadow 0.3s;
-background-image: url(“data:image/svg+xml,%3Csvg xmlns=‘http://www.w3.org/2000/svg’ width=‘12’ height=‘12’ viewBox=‘0 0 12 12’%3E%3Cpath fill=’%237fffd4’ d=‘M6 8L1 3h10z’/%3E%3C/svg%3E”);
-background-repeat: no-repeat;
-background-position: right 1rem center;
 }
 .custom-select:focus {
 outline: none;
@@ -105,7 +119,7 @@ border-color: rgba(176,136,249,0.6);
 box-shadow: 0 0 12px rgba(176,136,249,0.15);
 background-color: rgba(176,136,249,0.04);
 }
-.custom-select option { background: #10121e; color: var(–paper); }
+.custom-select option { background: #10121e; color: #e8eef5; }
 
 /* Radio buttons */
 .attr-radio { display: none; }
@@ -274,15 +288,17 @@ margin: 0 auto;
 }
 
 .section-label {
-font-size: 0.65rem;
-letter-spacing: 0.3em;
+font-size: 0.7rem;
+letter-spacing: 0.15em;
 text-transform: uppercase;
+color: #7fffd4;
 background: linear-gradient(90deg, var(–aurora-1), var(–aurora-2), var(–aurora-3));
 background-size: 200% 100%;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 background-clip: text;
 animation: aurora-shift 4s ease infinite;
+display: inline-block;
 }
 
 #result-section { display: none; }
@@ -309,7 +325,7 @@ filter: drop-shadow(0 0 20px rgba(127,255,212,0.25)) drop-shadow(0 0 40px rgba(1
 </style>
 
 </head>
-<body>
+<body style="background-color:#06080f;color:#e8eef5;">
 <div class="relative z-10 max-w-2xl mx-auto px-4 py-8 min-h-screen flex flex-col">
 
   <!-- Header -->
